--- a/index.css
+++ b/index.css
@@ -180,12 +180,14 @@ input[id="dot-8"]:checked ~ .pacman {transform: translateX(calc(var(--ddim) + va
         margin: 0;
         padding: 0;
         border: none;
+        margin-left: -100px;
+        margin-top: 80px;
     }
     
     .mario {
         width: 200px;
         height: 100px;
-        margin-left: 50px;
+        margin-left: -30px;
         margin-top: 50px;
     }
 
@@ -205,16 +207,21 @@ input[id="dot-8"]:checked ~ .pacman {transform: translateX(calc(var(--ddim) + va
         margin: 0;
         padding: 0;
         border: none;
+        margin-left: -100px;
+        margin-top: 80px;
     }
 
     .mario {
         width: 250px;
         height: 150px;
-        margin-left: 20px;
+        margin-left: -20px;
         margin-top: 50px;
     }
 
     .hello {
         font-size: 25px;
+        margin-left: -15px;
     }
+    
+    
 }
