--- a/index.css
+++ b/index.css
@@ -185,15 +185,14 @@ input[id="dot-8"]:checked ~ .pacman {transform: translateX(calc(var(--ddim) + va
     }
     
     .mario {
-        width: 200px;
-        height: 100px;
-        margin-left: auto;
-        margin-right: auto;
-        content-align: center;
+        width: 250px;
+        height: 200px;
+        margin-left: 35px;
+        margin-top: 30px;
     }
 
     .hello {
-        font-size: 25px;
+        font-size: 22px;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
@@ -203,10 +202,12 @@ input[id="dot-8"]:checked ~ .pacman {transform: translateX(calc(var(--ddim) + va
         margin-left: auto;
         margin-right: auto;
         text-align: center;
+        font-size: 17px;
     }
     
-    .pacman {
-        margin-left: auto;
+    .pagination {
+        margin-top: 35px;
+        margin-left: 50px;
         margin-right: auto;
 }
 
